# Intern_cpp_VoTToN

./: README.md
00_Introduction/: CMakeLists.txt  main.cpp
01_Templates/: CMakeLists.txt  Templates.cpp
02_CMake/: CMakeLists.txt
02_CMake/files/: CMake.cpp  CMake.h  main.cpp  main.h
03_Tests/: CMakeLists.txt  CMakeLists.txt.in
03_Tests/files/: TestsCMake.cpp
04_Function/: CMakeLists.txt
04_Function/files/: Func.h  main.cpp
05_SparseMatrix/: CMakeLists.txt
05_SparseMatrix/files/: main.cpp  sparse_matrix_dok.h
06_1_OpenCV/: CMakeLists.txt
06_1_OpenCV/files/: main.cpp
06_2_OpenCV/: CMakeLists.txt
06_2_OpenCV/files/: main.cpp
06_3_OpenCV/: CMakeLists.txt  Report.txt
06_3_OpenCV/files/: main.cpp
06_OpenCV/: CMakeLists.txt
06_OpenCV/files/: sparse_matrix_dok.h
07_MicroController/: MicroController.docx
08_OpenCL/: README.md  Result.txt  main.cpp
09_DLiB/: CMakeLists.txt  FacePose.cpp
10_MySQL/: CMakeLists.txt
10_MySQL/files/: main.cpp
11_Threads/: ant.hpp  ant_algorithm.hpp  ant_edge.hpp  main.cpp
